Bug 65252 - nowrap
git-svn-id: svn://svn.office.custis.ru/3rdparty/bugzilla.org/trunk@791 6955db30-a419-402b-8a0d-67ecbb4d7f56

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -308,6 +308,7 @@ div#docslinks {
 .bz_private_checkbox, .bz_comment_actions
 {
     margin: 0 .5em;
+    white-space: nowrap;
 }
 
 .bz_comment_actions, .bz_comment_number, .bz_private_checkbox {
